--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,7 +855,7 @@ section {
 }
 
 .services .iconbox-blue i {
-  color: #47aeff;
+  color: #ffa76e;
 }
 
 .services .iconbox-blue:hover .icon i {
@@ -863,7 +863,7 @@ section {
 }
 
 .services .iconbox-blue:hover .icon path {
-  fill: #47aeff;
+  fill: #ffa76e;
 }
 
 .services .iconbox-orange i {
